refactor(pocketprobe): 优化物品栏布局和命令逻辑
- 更新版本号至 1.4.2
- 优化玩家物品栏布局，热启动栏移至最下面
- 移除冗余条件判断和重复代码
- 修复填充物放置逻辑，避免遮挡玩家物品栏第三行